# old-proglang-syntaxes-talk

./: .gitignore  Makefile  README.md  README.rst  light.style  light4x3.style  old-syntax-notes.rst  old-syntax-slides.rst  old-syntax-slides.too.long.rst  pyproject.toml
