[tool.poetry]
name = "old-proglang-syntaxes-talk"
version = "0.1.0"
description = "Talk on Old Programing Language Syntaxes"
authors = ["Tibs <tibs@tonyibbs.co.uk>"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.6"
rst2pdf = "^0.98"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
